--- a/src/main/resources/META-INF/resources/atividade.xhtml
+++ b/src/main/resources/META-INF/resources/atividade.xhtml
@@ -6,8 +6,8 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://ifrn.edu.br/conta"
                 template="layout/template.xhtml">
-    <ui:define name="content">
-        <c:crud title="Atividades" managedBean="#{atividadeCrudMBean}" showDeleteActionLink="true">
+    <ui:define name="content" >
+        <c:crud title="Atividades" managedBean="#{atividadeCrudMBean}" showDeleteActionLink="false" >
             <ui:define name="listColumns">
                 <p:column headerText="Nome" sortBy="#{bean.nome}" filterBy="#{bean.nome}" >
                     <h:outputText value="#{bean.nome}" />
